--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ name                     : "Won-Jin Kim"
 description              : "Software Engineer"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "kimwonjin97/kimwonjin97.github.io"
+repository               : "kimwonjin97/comments"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
