--- a/_config.yml
+++ b/_config.yml
@@ -209,6 +209,12 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
 
+# Collections
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
 
 # Sass/SCSS
 sass:
