Added Sample Portfolio

--- a/_config.yml
+++ b/_config.yml
@@ -214,7 +214,16 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
+  
 
+defaults:
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
 
 # Sass/SCSS
 sass:
